Fix no. 1 for render not showing with inline style

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,6 @@ body {
 
 .page-holder {
     height: 600px;
-    background: url('../images/raptor.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
